{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 55,
  "lineage": "866a31ab-c70b-523e-b0f9-938e00f41f7e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "cloud9-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-00660ad7b143031ce",
            "arn": "arn:aws:ec2:eu-central-1:912888207281:instance/i-0475914246bcbc4e5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:aws:cloud9:environment",
                "values": [
                  "2e4cd1a17336442ebf1bd9f93a04680a"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0475914246bcbc4e5",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b4e0893a97742ba1",
            "private_dns": "ip-172-31-41-215.eu-central-1.compute.internal",
            "private_ip": "172.31.41.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ce217315fee8aee",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aws-cloud9-demo-2e4cd1a17336442ebf1bd9f93a04680a-InstanceSecurityGroup-1WSHN2BOWBR5H"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fd6b7780",
            "tags": {
              "Name": "aws-cloud9-demo-2e4cd1a17336442ebf1bd9f93a04680a",
              "owner_emails_address": "vymarkov@gmail.com",
              "user_name": "cloud9-user"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-034bba78389ed95f7"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "cloud9_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:912888207281:security-group/sg-034bba78389ed95f7",
            "description": "Security group for AWS Cloud9 environment aws-cloud9-demo-2e4cd1a17336442ebf1bd9f93a04680a",
            "filter": null,
            "id": "sg-034bba78389ed95f7",
            "name": "aws-cloud9-demo-2e4cd1a17336442ebf1bd9f93a04680a-InstanceSecurityGroup-1WSHN2BOWBR5H",
            "tags": {
              "Name": "aws-cloud9-demo-2e4cd1a17336442ebf1bd9f93a04680a",
              "owner_emails_address": "vymarkov@gmail.com",
              "user_name": "cloud9-user"
            },
            "vpc_id": "vpc-aa7a84c0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_from_developer_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "195.69.222.254/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-950781080",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034bba78389ed95f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_cloud9_environment_ec2.demo",
            "data.aws_iam_user.gitpod_user",
            "data.aws_instance.cloud9-instance",
            "data.aws_security_group.cloud9_default_sg"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_workstation",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:912888207281:subnet/subnet-fd6b7780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-fd6b7780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912888207281",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-aa7a84c0"
          }
        }
      ]
    },
    {
      "module": "module.cloud9_workstation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0994cdfed5f3888d6",
            "arn": "arn:aws:ec2:eu-central-1:912888207281:instance/i-0077243442167479e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "foobar",
            "id": "i-0077243442167479e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "development",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0533d2245c7323bcd",
            "private_dns": "ip-172-31-42-224.eu-central-1.compute.internal",
            "private_ip": "172.31.42.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:912888207281:key/8f0d2e6e-bbeb-4950-88f2-8aa8e35e2c49",
                "throughput": 0,
                "volume_id": "vol-00dc4ec0bcd83b859",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "eg-dev-vymarkov"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fd6b7780",
            "tags": {
              "Name": "eg-dev-vymarkov",
              "Namespace": "eg",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "eg-dev-vymarkov",
              "Namespace": "eg",
              "Stage": "dev"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "eg-dev-vymarkov",
              "Namespace": "eg",
              "Stage": "dev"
            },
            "vpc_security_group_ids": [
              "sg-0624eaa8a4c1e8c25"
            ]
          },
          "dependencies": [
            "data.aws_iam_instance_profile.this",
            "module.cloud9_workstation.aws_iam_instance_profile.default",
            "module.cloud9_workstation.data.aws_ami.default",
            "module.cloud9_workstation.data.aws_ami.info",
            "module.cloud9_workstation.data.aws_subnet.default",
            "module.cloud9_workstation.module.security_group.aws_security_group.default",
            "module.cloud9_workstation.module.security_group.data.aws_security_group.external"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_workstation.module.security_group",
      "mode": "data",
      "type": "aws_security_group",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.cloud9_workstation.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:912888207281:security-group/sg-0624eaa8a4c1e8c25",
            "description": "EC2 Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0624eaa8a4c1e8c25",
            "ingress": [],
            "name": "eg-dev-vymarkov",
            "name_prefix": "",
            "owner_id": "912888207281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eg-dev-vymarkov",
              "Namespace": "eg",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "eg-dev-vymarkov",
              "Namespace": "eg",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-aa7a84c0"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cloud9_workstation.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress--1-0-65535-9c87e5e1ed040a443ce1ac8e6d6cf159",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1163472354",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0624eaa8a4c1e8c25",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cloud9_workstation.module.security_group.aws_security_group.default",
            "module.cloud9_workstation.module.security_group.data.aws_security_group.external"
          ]
        }
      ]
    }
  ]
}